java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField6.pass
/*
 * CreateElement1.java
 *
 * Created on March 21, 2005, 10:21 PM
 *
 * To change this template, choose Tools | Options and locate the template under
 * the Source Creation and Management node. Right-click the template and choose
 * Open. You can then make changes to the template in the Source Editor.
 */

package org.netbeans.test.java.hints;
import java.util.List;

/**
 *
 */
public class CreateField6 {
    private List t;
    
    /** Creates a new instance of CreateElement1 */
    public CreateField6() {
    }
    
    public final void main(String[] args) {
        List l;
        t = l;
    }

}
